2016-02-16  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 1.1.0 released
        =========================

        Optimise GModelSpatialDiffuseCube::set_mc_cone() method (#1673)
        Use default GTime in GObservation::deadc() method (#1670)
        The GApplicationPar::filename() methods now take and return GFilename (#1671)
        Add GFilename methods and remove equivalents from GTools (#1666)
        Use column names for CTA response table access (#1656)
        Add non-const GObservation::events() method (#1664)
        Remove event fetching from GCTAObservation class (#1648)
        Implement event fetching and disposal in GCTAEventList class (#1648)
        Add GFilename::fullname() method
        Add GCTAEventList::remove() method
        Handle also additional columns in GCTAEventList::append() method
        Correct GFitsTableCol::insert() method for empty columns
        Correct GCTAEdisp2D::compute_ebounds_xxx() methods (#1662)
        Use GFilename in GFits to store filename (#1649)
        Load CTA GTI extension from the HDU name provided by the DSS keyword (#1598)


2016-01-27  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Bug fix version 1.0.1 released
        ================================

        Add units to CTA event list columns (#1616)
        Allow usage of numbers in FITS extension names (#1611)
        Solve compatibility issues with Anaconda on Mac OS X (#1607)
        Correct diffuse map MC normalisation (#1584)


2015-12-18  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 1.0.0 released
        =========================

        Ignore errors for El Capitan post processing (#1605)
        Read only mandatory columns in GCTAEventList (#1600)
        Remove extname arguments from classes (#1601)
        Add GFilename class (#1599)
        Check existence of files in CTA response loading (#1586)
        GSkyMap::__getitem__ throw exception if out of bound (#1581)